--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <div class="toc">
 			<ul class="nav">
 				<li class="">
-					<a href="#drone-route-simulator---cautious-adaptation-for-defiant-components">Drone Route Simulator</a>
+					<a href="#drone-route-simulator---cautious-adaptation-for-defiant-components">Dragonfly</a>
 					<ul class="nav">
 						<li class="">
 							<a href="#summary">Summary</a>
