--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
 			<li><strong>Hospital</strong>, which can be set by the user as the Source and Target hospitals of the flight;</li>
 			<li><strong>Antenna</strong>, which emits waves that cause a bad connection in the drones located in its adjacent blocks;</li>
 			<li><strong>Drone</strong>, the main element that has its own properties, as described in the next steps.</li>
+			<li><strong>Boat</strong>, a boat that can save drones that are about to execute a safety landing and carry them to their destination.</li>
+			<li><strong>House</strong>, a graphic representation of a House.</li>
+			<li><strong>Tree</strong>, a graphic representation of a Tree.</li>
+
 		</ul>
 		<p>
 			This simulator provides two options for setting the environment:
@@ -147,8 +151,9 @@
 			<li><strong>Battery consumption per block</strong>: it sets the percentage of battery consumed when the selected drone moves from a block to an adjacent block.</li>
 			<li><strong>Battery consumption per second</strong>: it sets the percentage of battery consumed per second while the selected drone is flying.</li>
 			<li><strong>Initial battery</strong>: the initial percentage value for the selected drone.</li>
-			<li><strong>Wrapper checkbox</strong>: by checking this box, the user selects a drone with the wrapper implementation, while leaving the box unchecked means that the selected drone will flight according to its original behaviour.</li>
-			<li><strong>Automatic checkbox</strong>: by checking this box, the user turns the automatic pilot feature of the drone on, so it will move independently following a minimal path algorithm. On the other hand, leaving the box unchecked implies that the user will pilot the drone manually.</li>			
+			<li><strong>Wrapper dropdown</strong>: The user selects the desired wrapper implementation, or selects the "None" option for executing with its original behavior.<li><strong>Wrapper checkbox</strong>: by checking this box, the user selects a drone with the wrapper implementation, while leaving the box unchecked means that the selected drone will flight according to its original behaviour.</li>
+			<li><strong>Automatic checkbox</strong>: by checking this box, the user turns the automatic pilot feature of the drone on, so it will move independently following a minimal path algorithm. On the other hand, leaving the box unchecked implies that the user will pilot the drone manually.</li>
+			<li><strong>Drone's Destination: by clicking the gear icon, the user can select on the environment the destination's position.</strong></li>
 		</ul>
 		<p>
 			Controls for piloting drones manually:
