--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			Running the Simulator - Step-by-step
 		</h2>
 		<p>
-			This section presents a step-by-step tutorial to use the artifact. In addition, it is possible to watch a usage demonstration of the simulator in <a href="https://www.youtube.com/watch?v=iY0xKX4J9yk" target="_blank">https://www.youtube.com/watch?v=iY0xKX4J9yk</a>.
+			This section presents a step-by-step tutorial to use the artifact.
 		</p>
 		<h3 id="setting-up-the-environment" style="">
 			<a class="anchor hidden-xs" href="#setting-up-the-environment" title="setting-up-the-environment">
